Bug 238672 - When saving checksums fails, they are lost. No 2nd chance to save elsewhere.
Summary: When saving checksums fails, they are lost. No 2nd chance to save elsewhere.
Status: RESOLVED FIXED
Alias: None
Product: krusader
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.0-beta3 "Single Step"
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Shie Erlich
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2010-05-24 11:05 UTC by mi
Modified: 2013-03-01 16:02 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mi 2010-05-24 11:05:06 UTC
Version:           0.65 (using KDE 4.2.4) 
OS:                Linux

Krusader 2.0.0 (why does this web form only offer 0.65 to 1.10?)

After using Krusader's built-in checksum facility (File->Create Checksums), the dialog to save the result comes up. If it fails to save the file, it just closes and all the checksums are lost.

On failing to save, the save dialog should come back to offer the possibility to save elsewhere.

It might seem like a minor bug, but I had checksummed 80 GB. of data. That takes a very long time, so losing it all is extremely frustrating.

(the reason why the file save failed is irrelevant, but for the curious: the disk was read-only; my mistake in this case, but that's no reason to just throw the checksums away)


Reproducible: Always




OS: Linux (i686) release 2.6.28-18-generic
Compiler: cc
Comment 1 Jan Lepper 2013-03-01 16:02:44 UTC
Git commit 791fab4c70062011c2daab6e2988682197039d2c by Jan Lepper.
Committed on 01/03/2013 at 16:40.
Pushed by janlepper into branch 'master'.

FIXED: [ 238672 ] When saving checksums fails, they are lost. No 2nd chance to save elsewhere.

Add check whether any error occurred during writing of the file.

Remove "Save checksum to file:" checkbox since it's redundant -
if the user doesn't want to save, he can simply cancel.

M  +1    -0    ChangeLog
M  +60   -43   krusader/Dialogs/checksumdlg.cpp
M  +13   -3    krusader/Dialogs/checksumdlg.h

http://commits.kde.org/krusader/791fab4c70062011c2daab6e2988682197039d2c