FIXED: [ 238672 ] When saving checksums fails, they are lost. No 2nd chance to save elsewhere.

BUG: 238672

Add check whether any error occurred during writing of the file.

Remove "Save checksum to file:" checkbox since it's redundant -
if the user doesn't want to save, he can simply cancel.